--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<input type="button" id="tts_btn" onclick="but()" value="发送" />
 		<br />
 		<br />
-		<img src="https://sealres.myssl.com/seal/img/2x/seal.png?domain=myssl.com" id="myssl" onclick="myssl()"/>
+		<img src="img/seal.png" id="myssl" onclick="myssl()"/>
 		<p>Copyright © Piterator 2019 - 2020</p>
 	</div>
 </body>
