--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Asiroe</title>
 	
 	<header class="mui-bar mui-bar-nav">
-		<h1 class="mui-title">Asiroe</h1>
+		<h1 class="mui-title" onclick="Asiroe()">Asiroe</h1>
 	</header>
 	
 	<link rel="stylesheet" href="css/mui.min.css" type="text/css" />
@@ -31,7 +31,7 @@
 		<br />
 		<br />
 		<img src="img/seal.png" id="myssl" onclick="myssl()"/>
-		<p>Copyright © Piterator 2019 - 2020</p>
+		<p>Copyright © Piterator 2019 - 2020 |<a onclick="about()">  关于</a></p>
 	</div>
 </body>
 
